syntax = "proto3";

package ru.expanse.quader.lib.api.proto.botmanager;

option java_package = "ru.expanse.quader.lib.api.proto.botmanager";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service ShutDownCommandService {
    rpc ShutDown(ShutDownRequest) returns (google.protobuf.Empty);
}

message ShutDownRequest {
    string bot_id = 1;
}